# uk-autumn-budget-lifecycle

./: Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: test_student_loan_interest.py  test_two_child_limit.py
frontend/: index.html  vercel.json
tests/: test_frontend_api_consistency.js  test_hover_modal_consistency.js
