[project]
name = "bbc-ask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
